src/OpenCvSharp/Internal/Interop/NativeMethods.XStereo.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_num_disparities")]
        internal static extern int XStereoBinarySGBMGetNumDisparities(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_num_disparities")]
        internal static extern int XStereoBinarySGBMSetNumDisparities(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_block_size")]
        internal static extern int XStereoBinarySGBMGetBlockSize(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_block_size")]
        internal static extern int XStereoBinarySGBMSetBlockSize(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_speckle_window_size")]
        internal static extern int XStereoBinarySGBMGetSpeckleWindowSize(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_speckle_window_size")]
        internal static extern int XStereoBinarySGBMSetSpeckleWindowSize(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_speckle_range")]
        internal static extern int XStereoBinarySGBMGetSpeckleRange(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_speckle_range")]
        internal static extern int XStereoBinarySGBMSetSpeckleRange(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_disp12_max_diff")]
        internal static extern int XStereoBinarySGBMGetDisp12MaxDiff(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_disp12_max_diff")]
        internal static extern int XStereoBinarySGBMSetDisp12MaxDiff(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_pre_filter_cap")]
        internal static extern int XStereoBinarySGBMGetPreFilterCap(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_pre_filter_cap")]
        internal static extern int XStereoBinarySGBMSetPreFilterCap(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_uniqueness_ratio")]
        internal static extern int XStereoBinarySGBMGetUniquenessRatio(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_uniqueness_ratio")]
        internal static extern int XStereoBinarySGBMSetUniquenessRatio(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_p1")]
        internal static extern int XStereoBinarySGBMGetP1(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_p1")]
        internal static extern int XStereoBinarySGBMSetP1(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_p2")]
        internal static extern int XStereoBinarySGBMGetP2(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_p2")]
        internal static extern int XStereoBinarySGBMSetP2(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_mode")]
        internal static extern int XStereoBinarySGBMGetMode(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_mode")]
        internal static extern int XStereoBinarySGBMSetMode(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_spekle_removal_technique")]
        internal static extern int XStereoBinarySGBMGetSpeckleRemovalTechnique(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_spekle_removal_technique")]
        internal static extern int XStereoBinarySGBMSetSpeckleRemovalTechnique(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_binary_kernel_type")]
        internal static extern int XStereoBinarySGBMGetBinaryKernelType(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_binary_kernel_type")]
        internal static extern int XStereoBinarySGBMSetBinaryKernelType(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_get_sub_pixel_interpolation_method")]
        internal static extern int XStereoBinarySGBMGetSubPixelInterpolationMethod(IntPtr matcher, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_binary_sgbm_set_sub_pixel_interpolation_method")]
        internal static extern int XStereoBinarySGBMSetSubPixelInterpolationMethod(IntPtr matcher, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_create")]
        internal static extern int XStereoQuasiDenseCreate(int width, int height, byte[] parameterFilePath, out IntPtr stereo);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_release")]
        internal static extern void XStereoQuasiDenseRelease(IntPtr stereo);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_load_parameters")]
        internal static extern int XStereoQuasiDenseLoadParameters(IntPtr stereo, byte[] parameterFilePath, out int result);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_save_parameters")]
        internal static extern int XStereoQuasiDenseSaveParameters(IntPtr stereo, byte[] parameterFilePath, out int result);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_process")]
        internal static extern int XStereoQuasiDenseProcess(IntPtr stereo, IntPtr left, IntPtr right);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_sparse_matches_count")]
        internal static extern int XStereoQuasiDenseGetSparseMatchesCount(IntPtr stereo, out int count);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_sparse_matches_fill")]
        internal static extern int XStereoQuasiDenseGetSparseMatchesFill(IntPtr stereo, NativeXStereoMatchQuasiDense[] matches, int matchCapacity, out int count);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_dense_matches_count")]
        internal static extern int XStereoQuasiDenseGetDenseMatchesCount(IntPtr stereo, out int count);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_dense_matches_fill")]
        internal static extern int XStereoQuasiDenseGetDenseMatchesFill(IntPtr stereo, NativeXStereoMatchQuasiDense[] matches, int matchCapacity, out int count);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_match")]
        internal static extern int XStereoQuasiDenseGetMatch(IntPtr stereo, int x, int y, out float matchX, out float matchY);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_disparity")]
        internal static extern int XStereoQuasiDenseGetDisparity(IntPtr stereo, IntPtr disparity);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_get_parameters")]
        internal static extern int XStereoQuasiDenseGetParameters(IntPtr stereo, out NativeXStereoPropagationParameters parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_xstereo_quasi_dense_set_parameters")]
        internal static extern int XStereoQuasiDenseSetParameters(IntPtr stereo, ref NativeXStereoPropagationParameters parameters);
    }
}
#endif
